# lidar_slam_2d

./: .gitignore  README.md  pyproject.toml
configs/: bench_backpack_full.yaml  bench_fast.yaml  cartographer_backpack2d_port.yaml  cartographer_backpack2d_port_full.yaml  cartographer_parity_full.yaml  cartographer_parity_medium.yaml  cartographer_parity_medium_loopicp_fast.yaml  cartographer_parity_medium_s300_locked.yaml  cartographer_parity_noloop_s2k.yaml  default.yaml  iilabs_correlative_light.yaml  iilabs_hybrid_tail.yaml  iilabs_hybrid_tail_dense.yaml  iilabs_hybrid_tail_fine.yaml  iilabs_hybrid_tail_fine_refdense.yaml  iilabs_hybrid_tail_refdense.yaml  iilabs_hybrid_tail_refdense_cv.yaml  iilabs_hybrid_tail_refdense_cv075.yaml  iilabs_hybrid_tail_refdense_cv125.yaml  iilabs_hybrid_tail_refdense_cv_s1.yaml  iilabs_hybrid_tail_refdense_cv_s2.yaml  iilabs_hybrid_tail_refdense_cv_s2_icptight.yaml  iilabs_hybrid_tail_refdense_cv_s2_refinegrid.yaml  iilabs_hybrid_tail_refdense_cv_s2_trim05.yaml  iilabs_hybrid_tail_refdense_wideyaw.yaml  iilabs_icp_dense.yaml  iilabs_icp_medium.yaml  iilabs_loop_hybrid_refdense_cv_s1_refinegrid.yaml  iilabs_loop_hybrid_refdense_cv_s2_refinegrid_loop.yaml  iilabs_loop_refinegrid_adaptive_fallback.yaml  iilabs_loop_refinegrid_shortloop_mid.yaml  iilabs_loop_refinegrid_shortloop_tight.yaml  iilabs_loop_refinegrid_top3.yaml  iilabs_loop_refinegrid_top3_fallback_mid.yaml  iilabs_loop_refinegrid_top3_fallback_mid_shortloop_mid.yaml  iilabs_loop_refinegrid_top3_fallback_wide.yaml  iilabs_ramp_bb_2d.yaml  iilabs_ramp_pitch_robust.yaml  (+10 more)
(+118 files in other folders)
